install/argocd/ns_cpet-argocd.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '-10'
  name: argocd
